@@ -165,7 +165,7 @@
 #define STR_SEQMTF N_("Same command as MTF but for the sequence <b>sequencename</b>.\n\nThe output sequence name starts with the prefix \"mtf_\" unless otherwise specified with <b>-prefix=</b> option")
 #define STR_SEQPLATESOLVE N_("Plate solve a sequence. A new sequence will be created with the prefix \"ps_\" if the input sequence is SER, otherwise, the images headers will be updated. In case of SER, providing the metadata is mandatory and the output sequence will be in the FITS cube format, as SER cannot store WCS data.\nIf WCS or other image metadata are erroneous or missing, arguments must be passed:\n  the approximate image center coordinates can be provided in decimal degrees or degree/hour minute second values (J2000 with colon separators), with right ascension and declination values separated by a comma or a space (not mandatory for astrometry.net).\n focal length and pixel size can be passed with <b>-focal=</b> (in mm) and <b>-pixelsize=</b> (in microns), overriding values from images and settings. See also options to solve blindly with local Astrometry.net\n\nFor faster star detection in big images, downsampling the image is possible with <b>-downscale</b>.\nThe solve can account for distortions using SIP convention with polynomials up to order 5. Default value is taken form the astrometry preferences. This can be changed with the option <b>-order=</b> giving a value between 1 and 5.\nWhen using Siril solver local catalogues or with local Astrometry.net, if the initial solve is not successful, the solver will search for a solution within a cone of radius specified with <b>-radius=</b> option. If no value is passed, the search radius is taken from the astrometry preferences. Siril near search can be disabled by passing a value of 0. (cannot be disabled for Astrometry.net).\nImages already solved will be skipped by default. This can be disabled by passing the option <b>-force</b>.\nUsing this command will update registration data unless the option <b>-noreg</b> is passed.\nYou can save the current solution as a distortion file with the option <b>-disto=</b>.\n\nImages can be either plate solved by Siril using a star catalogue and the global registration algorithm or by astrometry.net's local solve-field command (enabled with <b>-localasnet</b>).\n\n<b>Siril platesolver options: </b>\nThe limit magnitude of stars used for plate solving is automatically computed from the size of the field of view, but can be altered by passing a +offset or -offset value to <b>-limitmag=</b>, or simply an absolute positive value for the limit magnitude.\nThe choice of the star catalog is automatic unless the <b>-catalog=</b> option is passed: if local catalogs are installed, they are used, otherwise the choice is based on the field of view and limit magnitude. If the option is passed, it forces the use of the remote catalog given in argument, with possible values: tycho2, nomad, gaia, ppmxl, brightstars, apass.\nIf the computed field of view is larger than 5 degrees, star detection will be bounded to a cropped area around the center of the image unless <b>-nocrop</b> option is passed.\nWhen using online catalogues, a single catalogue extraction will be done for the entire sequence. If there is a lot of drift or different sampling, that may not succeed for all images. This can be disabled by passing the argument <b>-nocache</b>, in which case metadata from each image will be used (except for the forced values like center coordinates, pixel size and/or focal length).\n\n<b>Astrometry.net solver options:</b>\nPassing options <b>-blindpos</b> and/or <b>-blindres</b> enables to solve blindly for position and for resolution respectively. You can use these when solving an image with a completely unknown location and sampling")
 #define STR_SEQPROFILE N_("Generates an intensity profile plot between 2 points in each image in the sequence. After the mandatory first argument stating the sequence to process, the other arguments are the same as for the <b>profile</b> command. If processing a sequence and it is desired to have the current image number and total number of images displayed in the format \"My Sequence (1 / 5)\", the given title should end with () (e.g. \"My Sequence ()\" and the numbers will be populated automatically)")
-#define STR_SEQPSF N_("Same command as PSF but runs on sequences. This is similar to the one-star registration, except results can be used for photometry analysis rather than aligning images and the coordinates of the star can be provided by options.\nThis command is what is called internally by the menu that appears on right click in the image, with the PSF for the sequence entry. By default, it will run with parallelisation activated; if registration data already exists for the sequence, they will be used to shift the search window in each image. If there is no registration data and if there is significant shift between images in the sequence, the default settings will fail to find stars in the initial position of the search area.\nThe follow star option can then be activated by going in the registration tab, selecting the one-star registration and checking the follow star movement box (default in headless if no registration data is available).\n\nResults will be displayed in the Plot tab, from which they can also be exported to a comma-separated values (CSV) file for external analysis.\n\nWhen creating a light curve, the first star for which seqpsf has been run, marked 'V' in the display, will be considered as the variable star. All others are averaged to create a reference light curve subtracted to the light curve of the variable star.\n\nCurrently, in headless operation, the command prints some analysed data in the console, another command allows several stars to be analysed and plotted as a light curve: LIGHT_CURVE. Arguments are mandatory in headless, with -at= allowing coordinates in pixels to be provided for the target star and -wcs= allowing J2000 equatorial coordinates to be provided")
+#define STR_SEQPSF N_("Same command as PSF but runs on sequences. This is similar to the one-star registration, except results can be used for photometry analysis rather than aligning images and the coordinates of the star can be provided by options.\nThis command is what is called internally by the menu that appears on right click in the image, with the PSF for the sequence entry. If registration data already exist for the sequence, they will can be used to shift the search window in each image. If there is no registration data and if there is significant shift between images in the sequence, the default settings will fail to find stars in the initial position of the search area.\nThe follow star option can then be activated with the argument <b>-followstar</b>.\n\nResults will be displayed in the Plot tab, from which they can also be exported to a comma-separated values (CSV) file for external analysis.\n\nWhen creating a light curve, the first star for which seqpsf has been run, marked 'V' in the display, will be considered as the variable star. All others are averaged to create a reference light curve subtracted to the light curve of the variable star.\n\nCurrently, in headless operation, the command prints some analysed data in the console, another command allows several stars to be analysed and plotted as a light curve: LIGHT_CURVE. Arguments are mandatory: the sequence name must be provided (\".\" may be used to indicate the currently loaded sequence) and when headless it is mandatory to provide the coordinates of the star, with -at= allowing coordinates in pixels to be provided for the target star of -wcs= allowing J2000 equatorial coordinates to be provided")
 #define STR_SEQRESAMPLE N_("Scales the sequence given in argument <b>sequencename</b>. Only selected images in the sequence are processed.\n\nThe scale factor is specified either by the <b>-scale=</b> argument or by setting the output width, height or maximum dimension using the <b>-width=</b>, <b>-height=</b> or <b>-maxdim=</b> options.\n\nAn interpolation method may be specified using the <b>-interp=</b> argument followed by one of the methods in the list <b>ne</b>[arest], <b>cu</b>[bic], <b>la</b>[nczos4], <b>li</b>[near], <b>ar</b>[ea]}.. Clamping is applied for cubic and lanczos interpolation.\n\nThe output sequence name starts with the prefix \"scaled_\" unless otherwise specified with <b>-prefix=</b> option")
 #define STR_SEQRL N_("The same as the RL command, but applies to a sequence which must be specified as the first argument")
 #define STR_SEQSB N_("The same as the SB command, but applies to a sequence which must be specified as the first argument")
